kustomization/overlays/ephemeral/service-ephemeral.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: image-tool-ephemeral
  name: image-tool-ephemeral
spec:
  ports:
  - name: image-tool-ephemeral
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: image-tool-ephemeral
  type: LoadBalancer
status:
  loadBalancer: {}
