kustomization/overlays/ephemeral/route-ephemeral.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: image-tool-ephemeral
  name: image-tool-ephemeral
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: image-tool-ephemeral
    weight: null
